library/database_universe/test/errors/class/variable.dart
// only classes

import 'package:database_universe/database_universe.dart';

// ignore: invalid_annotation_target
@collection
const t = 'hello';
